--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>The Odin Recipe</h1>
+    <a href="./recipes/lasagna.html">Recipes</a>
 </body>
 </html>
